--- a/css/styles.css
+++ b/css/styles.css
@@ -55,11 +55,10 @@ a {
 .container {
     padding: 0 16px;
 }
-
-.page-header-conteiner{
+.main-header-conteiner {
     display: flex;
     align-items: center;
-justify-content: space-between;
+    justify-content: space-between;
 }
 
 .mobile-open-btn {
@@ -80,13 +79,71 @@ background-color: transparent;
     padding-bottom: 16px;
 }
 
+.page-link.special-line::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    height: 4px;
+    background-color: #404bbf;
+    border-radius: 2px;
+    width: 100%;
+    color: #404BBF;
+    
+}
+
+.special-line {
+    color: #404BBF;
+}
+
+
+
+
+.page-link {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    color: #2e2f42;
+
+}
+.mobile-menu {
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999999999;
+    background-color: #FFF;
+}
+
+.mobile-menu-close-btn {
+
+       position: absolute;
+       top: 0;
+       right: 0;
+       border: none;
+       background-color: transparent;
+       padding: 24px;
+       line-height: 0;
+       stroke: #E7E9FC;
+       
+}
+
+.mobile-menu-container {
+    position: relative;
+}
+
 
  @media screen and (min-width:320px) {
 .container {
 
     width: 352px;
     margin: 0 auto ;
-    padding: 0, 16px;
+    padding: 0 16px;
 }
  }
 
