--- a/css/styles.css
+++ b/css/styles.css
@@ -71,8 +71,12 @@ background-color: transparent;
 .mobile-open-btn-icon {
     stroke: #2F2F37;
 }
-
-
+.nav-list-mobile {
+    display: inline-flex;
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 40px;
+}
 
 .header-main {
     padding-top: 16px;
@@ -80,7 +84,7 @@ background-color: transparent;
 }
 
 .page-link.special-line::after {
-    content: "";
+    
     position: absolute;
     left: 0;
     bottom: -1px;
@@ -91,12 +95,6 @@ background-color: transparent;
     color: #404BBF;
     
 }
-
-.special-line {
-    color: #404BBF;
-}
-
-
 
 
 .page-link {
