--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,7 @@ background-color: transparent;
         flex-direction: column;
         align-items: flex-start;
         gap: 40px;
+    padding-top: 72px;
 }
 
 .header-main {
@@ -83,18 +84,7 @@ background-color: transparent;
     padding-bottom: 16px;
 }
 
-.page-link.special-line::after {
-    
-    position: absolute;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: #404bbf;
-    border-radius: 2px;
-    width: 100%;
-    color: #404BBF;
-    
-}
+
 
 
 .page-link {
@@ -116,16 +106,18 @@ background-color: transparent;
     height: 100%;
     z-index: 9999999999;
     background-color: #FFF;
+   
 }
 
 .mobile-menu-close-btn {
 
-       position: absolute;
-       top: 0;
-       right: 0;
+    position: absolute;
+         top: 0;
+        right: 0;
        border: none;
        background-color: transparent;
-       padding: 24px;
+       padding-top: 24px;
+    padding-right: 24px;
        line-height: 0;
        stroke: #E7E9FC;
        
@@ -134,6 +126,62 @@ background-color: transparent;
 .mobile-menu-container {
     position: relative;
 }
+
+.page-link:hover{
+    color: #404BBF;
+}
+
+.address-block-list {
+display: inline-flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 24px;
+    padding-top: 168px ;
+}
+
+.contact-link {
+
+    color: #2E2F42;
+        font-size: 20px;
+        font-weight: 500;
+        line-height: 1,2;
+        letter-spacing: 0,02em;
+}
+
+
+.contact-link:hover{
+    color:#4D5AE5;
+}
+
+
+.icon-team-list {
+    display: flex;
+    gap: 24px;
+    margin-top: 48px;
+}
+
+.icon-team-item-link {
+    width: 40px;
+    height: 40px;
+    background-color: #4d5ae5;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-team-item-link:hover,
+.icon-team-item-link:focus {
+    background-color: #404bbf;
+}
+
+.icon-team-item-link-swg {
+    fill: var(--icon-color, #f4f4fd)
+}
+
+
+
+
 
 
  @media screen and (min-width:320px) {
