--- a/css/styles.css
+++ b/css/styles.css
@@ -109,23 +109,30 @@ background-color: transparent;
    
 }
 
-.mobile-menu-close-btn {
+.mobile-menu-container {
+    position: relative;
+    
+}
 
-    position: absolute;
-         top: 0;
-        right: 0;
-       border: none;
-       background-color: transparent;
-       padding-top: 24px;
-    padding-right: 24px;
-       line-height: 0;
-       stroke: #E7E9FC;
+.mobile-menu-close-btn {
+position: absolute;
+    top: 24px;
+    right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    padding:0;
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        border 250ms cubic-bezier(0.4, 0, 0.2, 1);
        
 }
 
-.mobile-menu-container {
-    position: relative;
-}
 
 .page-link:hover{
     color: #404BBF;
