--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ a {
     display: none;
 }
 .header-logo {
-    color: var(--NAVY-BLUE, #2E2F42);
+    color: #4D5AE5;
        
         font-size: 18px;
         font-weight: 700;
@@ -52,9 +52,13 @@ a {
         text-transform: uppercase;
 }
 
-.container {
-    padding: 0 16px;
+
+.logo-text {
+    color:#2E2F42;
+
 }
+
+
 .main-header-conteiner {
     display: flex;
     align-items: center;
@@ -106,8 +110,12 @@ background-color: transparent;
     height: 100%;
     z-index: 9999999999;
     background-color: #FFF;
-    
-   
+    transform:translateX(100%);
+}
+
+.is-open {
+transform: translateX();
+
 }
 
 .mobile-menu-container {
@@ -178,6 +186,7 @@ display: inline-flex;
     justify-content: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .icon-team-item-link:hover,
 .icon-team-item-link:focus {
     background-color: #404bbf;
@@ -190,7 +199,17 @@ display: inline-flex;
 
 
 
+@media (max-width:767px) {
+.nav-list-mobile {
+display: none;
+}
+}
 
+@media (min-width:768px) {
+    .mobile-open-btn-icon{
+        display: none;
+    }
+}
 
  @media screen and (min-width:320px) {
 .container {
