--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,8 @@ a {
 }
 
 /* ==========Header mobile styl ========== */
+
+
 .nav-list {
     display: none;
 }
@@ -42,9 +44,9 @@ a {
 .address-block {
     display: none;
 }
+
 .header-logo {
     color: #4D5AE5;
-       
         font-size: 18px;
         font-weight: 700;
         line-height: 1.17;
@@ -58,12 +60,12 @@ a {
 
 }
 
-
 .main-header-conteiner {
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
 
 .mobile-open-btn {
 background-color: transparent;
@@ -72,15 +74,16 @@ background-color: transparent;
     line-height: 0;
 }
 
+
 .mobile-open-btn-icon {
     stroke: #2F2F37;
 }
+
 .nav-list-mobile {
     display: inline-flex;
         flex-direction: column;
         align-items: flex-start;
         gap: 40px;
-    padding-top: 72px;
 }
 
 .header-main {
@@ -96,13 +99,12 @@ background-color: transparent;
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     color: #2e2f42;
 
 }
-.mobile-menu {
 
+.mobile-menu {
     position: fixed;
     top: 0;
     left: 0;
@@ -111,11 +113,11 @@ background-color: transparent;
     z-index: 9999999999;
     background-color: #FFF;
     transform:translateX(100%);
+    padding-top: 72px;
 }
 
 .is-open {
-transform: translateX();
-
+transform: translateX(0);
 }
 
 .mobile-menu-container {
@@ -135,7 +137,7 @@ position: absolute;
     justify-content: center;
     background-color: #e7e9fc;
     border: 1px solid rgba(0, 0, 0, 0.1);
-    padding:0;
+    padding: 0;
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
         border 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -199,11 +201,7 @@ display: inline-flex;
 
 
 
-@media (max-width:767px) {
-.nav-list-mobile {
-display: none;
-}
-}
+
 
 @media (min-width:768px) {
     .mobile-open-btn-icon{
